# VectorChord

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  META.json.in  Makefile  README.md  _typos.toml  build.rs  rabbithole.control  rust-toolchain.toml  rustfmt.toml  taplo.toml  vchord.control
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  cla.yml  pgrx.yml  pgxn.yml  psql.yml  release.yml  release_pg_slim.yml  rust.yml  style.yml
bench/: README.md  bench.py  dump.py  index.py  internal.py  load.py  train.py
crates/algo/: Cargo.toml
crates/algo/src/: accessor.rs  lib.rs  prefetcher.rs  tuples.rs
crates/algorithm/: Cargo.toml
crates/algorithm/src/: build.rs  bulkdelete.rs  cache.rs  closure_lifetime_binder.rs  cost.rs  fast_heap.rs  freepages.rs  insert.rs  lib.rs  linked_vec.rs  linkedvec.rs  maintain.rs  operator.rs  pipe.rs  prefetcher.rs  prewarm.rs  rerank.rs  search.rs  select_heap.rs  split_heap.rs  tape.rs  tape_writer.rs  tuples.rs  types.rs  vectors.rs  window_heap.rs
crates/always_equal/: Cargo.toml
crates/distance/: Cargo.toml
crates/feistel/: Cargo.toml
crates/index/: Cargo.toml
crates/index_accessor/: Cargo.toml
crates/k_means/: Cargo.toml
crates/k_means/src/: flat.rs  hierarchical.rs  index.rs  lib.rs  quick.rs  rabitq.rs  square.rs
crates/make/: Cargo.toml
crates/rabitq/: Cargo.toml  build.rs
crates/rabitq/benches/: dot.rs
crates/rabitq/src/: b1.rs  b2.rs  b4.rs  b8.rs  binary.rs  bit.rs  bits.rs  block.rs  byte.rs  extended.rs  halfbyte.rs  lib.rs  original.rs  packing.rs  rotate.rs
crates/rabitq8/: Cargo.toml
crates/random_orthogonal_matrix/: Cargo.toml
crates/random_orthogonal_matrix/src/: lib.rs
crates/sbsii/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: api.rs  lib.rs  mock.rs
crates/simd/: Cargo.toml  build.rs  cshim.c
crates/simd/benches/: bench.rs
crates/simd/cshim/: aarch64.c  aarch64_byte.c  aarch64_fp16.c  aarch64_halfbyte.c  aarch64_sve_fp16.c  aarch64_sve_fp32.c  x86_64.c  x86_64_fp16.c
crates/simd/src/: aligned.rs  bit.rs  byte.rs  emulate.rs  f16.rs  f32.rs  fast_scan.rs  fht.rs  floating_f16.rs  floating_f32.rs  halfbyte.rs  lib.rs  packed.rs  packed_u4.rs  quantize.rs  rotate.rs  u8.rs
crates/simd/src/fast_scan/: mod.rs
crates/simd_macros/: Cargo.toml
crates/simd_macros/src/: lib.rs  target.rs
crates/small_iter/: Cargo.toml
crates/vamana/: Cargo.toml
crates/vamana/src/: build.rs  bulkdelete.rs  candidates.rs  checker.rs  insert.rs  lib.rs  maintain.rs  operator.rs  prune.rs  results.rs  search.rs  tuples.rs  types.rs  visited.rs
crates/vchord_vchordg/: Cargo.toml
crates/vchord_vchordg/src/: lib.rs  mock.rs
crates/vchordg/: Cargo.toml
crates/vchordg/src/: build.rs  bulkdelete.rs  candidates.rs  insert.rs  lib.rs  maintain.rs  operator.rs  prewarm.rs  prune.rs  results.rs  search.rs  tuples.rs  types.rs  vectors.rs  visited.rs
crates/vchordrq/: Cargo.toml  build.rs
crates/vchordrq-cuda/: Cargo.toml  build.rs
crates/vchordrq/cuda/: vchordrq_assign.cu
crates/vchordrq/src/: assign.rs  build.rs  bulkdelete.rs  cache.rs  centroids.rs  closure_lifetime_binder.rs  consume.rs  cost.rs  cuda.rs  eager_search.rs  fast_heap.rs  freepages.rs  insert.rs  lib.rs  linked_vec.rs  maintain.rs  operator.rs  prewarm.rs  rerank.rs  search.rs  tape.rs  tape_writer.rs  tuples.rs  types.rs  vectors.rs
crates/vector/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
devtools/: dump-codegen.sh  dump.sh
docker/: Dockerfile  binary.Dockerfile  pgrx.Dockerfile
docker/pg-cnpg/: Dockerfile  Dockerfile.arm  extension-install.sh  trunk-install.sh
docker/pg-slim/: Dockerfile
scripts/: README.md  bench.py  dump.py  index.py  train.py
signatures/version1/: cla.json
sql/install/: vchord--0.1.0.sql  vchord--0.2.0.sql  vchord--0.2.1.sql  vchord--0.2.2.sql  vchord--0.3.0.sql  vchord--0.4.1.sql  vchord--0.4.3.sql  vchord--0.5.0.sql  vchord--0.5.1.sql  vchord--0.5.2.sql  vchord--0.5.3.sql  vchord--1.0.0.sql  vchord--1.1.0.sql  vchord--1.2.0.sql
sql/upgrade/: vchord--0.1.0--0.2.0.sql  vchord--0.2.2--0.3.0.sql  vchord--0.4.3--0.5.0.sql  vchord--0.5.1--0.5.2.sql  vchord--1.0.0--1.1.0.sql  vchord--1.1.0--1.1.1.sql
src/: lib.rs  postgres.rs  projection.rs  types.rs  upgrade.rs
src/algorithm/: build.rs  freepages.rs  insert.rs  k_means.rs  mod.rs  operator.rs  parallelism.rs  prewarm.rs  rabitq.rs  scan.rs  tape.rs  tuples.rs  vacuum.rs  vectors.rs
src/datatype/: binary_rabitq4.rs  binary_rabitq8.rs  binary_scalar8.rs  functions_rabitq4.rs  functions_rabitq8.rs  functions_scalar8.rs  memory_halfvec.rs  memory_pgvector_halfvec.rs  memory_pgvector_vector.rs  memory_rabitq4.rs  memory_rabitq8.rs  memory_scalar8.rs  memory_vecf32.rs  memory_vector.rs  mod.rs  operators_halfvec.rs  operators_pgvector_halfvec.rs  operators_pgvector_vector.rs  operators_rabitq4.rs  operators_rabitq8.rs  operators_scalar8.rs  operators_vector.rs  text_rabitq4.rs  text_rabitq8.rs  text_scalar8.rs  typmod.rs  typmod_rabitq4.rs  typmod_rabitq8.rs
src/gucs/: executing.rs  mod.rs  prewarm.rs
src/index/: algorithm.rs  allocator.rs  am.rs  am_options.rs  am_scan.rs  fetcher.rs  functions.rs  gucs.rs  hook.rs  lazy_cell.rs  mod.rs  opclass.rs  projection.rs  sample.rs  scanners.rs  storage.rs  traverse.rs  types.rs  utils.rs
src/recorder/: hook.rs  mod.rs  text.rs  types.rs  worker.rs
src/sql/: bootstrap.sql  finalize.sql
src/types/: mod.rs  scalar8.rs
src/upgrade/: symbols.rs
src/utils/: cells.rs  k_means.rs  mod.rs  parallelism.rs
src/vchordrq/: mod.rs  types.rs
src/vchordrqfscan/: mod.rs  types.rs
tests/: README.md
tests/fail/: null.fail
tests/general/: distance.slt  filter_rerank_in_index.slt  index.slt  issue_427.slt  rerank_in_index.slt  rerank_in_table.slt
tests/logic/: external_build.slt  index.slt  issue427.slt  multivector.slt  null.fail  partition.slt  pin.slt  pushdown_plan.fail  pushdown_plan.slt  pushdown_range.fail  reindex.slt  rerank_in_table.slt  vector.slt
tools/: dev.md  dump.sh  package.sh  schema-codegen.sh  schema.sh
(+139 files in other folders)
