[package]
name = "vchord"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "vchord"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord"
path = "./src/bin/pgrx_embed.rs"

[features]
default = []
pg13 = ["pgrx/pg13", "pgrx-catalog/pg13"]
pg14 = ["pgrx/pg14", "pgrx-catalog/pg14"]
pg15 = ["pgrx/pg15", "pgrx-catalog/pg15"]
pg16 = ["pgrx/pg16", "pgrx-catalog/pg16"]
pg17 = ["pgrx/pg17", "pgrx-catalog/pg17"]

[dependencies]
algorithm = { path = "./crates/algorithm" }
always_equal = { path = "./crates/always_equal" }
distance = { path = "./crates/distance" }
k_means = { path = "./crates/k_means" }
rabitq = { path = "./crates/rabitq" }
simd = { path = "./crates/simd" }
vector = { path = "./crates/vector" }

half.workspace = true
paste.workspace = true
pgrx = { version = "=0.14.1", default-features = false, features = ["cshim"] }
pgrx-catalog = "0.2.0"
rand.workspace = true
seq-macro.workspace = true
serde.workspace = true
toml = "0.8.23"
validator.workspace = true
zerocopy.workspace = true

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1.47", features = ["local_dynamic_tls"] }

[lints]
workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
half = { version = "2.6.0", features = ["zerocopy"] }
paste = "1"
rand = "0.9.1"
seq-macro = "0.3.6"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
zerocopy = { version = "0.8.25", features = ["derive"] }

[workspace.lints]
clippy.identity_op = "allow"
clippy.int_plus_one = "allow"
clippy.needless_range_loop = "allow"
clippy.nonminimal_bool = "allow"
rust.unsafe_code = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
