[package]
name = "algo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
always_equal = { path = "../always_equal" }
distance = { path = "../distance" }
sbsii = { path = "../sbsii" }
simd = { path = "../simd" }
vector = { path = "../vector" }

bumpalo.workspace = true
half.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
