[package]
name = "algo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
always_equal = { path = "../always_equal" }
distance = { path = "../distance" }
simd = { path = "../simd" }
small_iter = { path = "../small_iter" }
vector = { path = "../vector" }

bumpalo.workspace = true
dary_heap.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
