[package]
name = "index_accessor"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "../index/src/accessor.rs"

[dependencies]
distance = { path = "../distance" }
rabitq = { path = "../rabitq" }
simd = { path = "../simd" }
vector = { path = "../vector" }

[lints]
workspace = true
