[package]
name = "k_means"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rabitq = { path = "../rabitq" }
simd = { path = "../simd" }
always_equal = { path = "../always_equal" }
distance = { path = "../distance" }

rand.workspace = true
rayon = "1.11.0"

[lints]
workspace = true
