[package]
name = "rabitq"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
simd = { path = "../simd" }

rand.workspace = true
rand_chacha.workspace = true
zerocopy.workspace = true

[build-dependencies]
rand.workspace = true
rand_chacha.workspace = true

[lints]
workspace = true
