[package]
name = "random_orthogonal_matrix"
version.workspace = true
edition.workspace = true

[dependencies]
# lock algebra version forever so that the QR decomposition never changes for same input
nalgebra = "=0.33.0"

rand.workspace = true
rand_chacha = "0.9.0"
rand_distr = "0.5.1"

[lints]
workspace = true
