[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
always_equal = { path = "../always_equal" }
distance = { path = "../distance" }
index = { path = "../index" }
rabitq = { path = "../rabitq" }
simd = { path = "../simd" }
vchordg = { path = "../vchordg" }
vector = { path = "../vector" }

anyhow = "1.0.100"
bumpalo = "3.19.1"
byteorder = "1.5.0"
priority-queue = "2.7.0"
min-max-heap = "1.3.0"
rand.workspace = true
serde.workspace = true
serde_json = "1.0.145"
validator.workspace = true
zerocopy.workspace = true
crossbeam-channel = "0.5.15"

[features]
pg18 = [] # vscode bug

[lints]
workspace = true
