[package]
name = "simd"
version.workspace = true
edition.workspace = true
publish = false

[features]
init = []
experimental_f16 = ["zerocopy/float-nightly"]
experimental_math = []

[dependencies]
simd_macros = { path = "../simd_macros" }

half = { version = "2.7.1", features = ["zerocopy"] }
seq-macro.workspace = true
zerocopy.workspace = true

[dev-dependencies]
rand.workspace = true

[build-dependencies]
cc = "1.2.41"
which = "8.0.0"

[lints]
workspace = true
