[package]
name = "simd"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
name = "bench"
harness = false
required-features = ["internal"]

[features]
init = []
internal = []
nightly_f16 = ["zerocopy/float-nightly"]

[dependencies]
simd_macros = { path = "../simd_macros" }

half = { version = "2.7.1", features = ["zerocopy"] }
seq-macro.workspace = true
zerocopy.workspace = true

[dev-dependencies]
criterion = "0.8.2"
rand.workspace = true

[build-dependencies]
cc = "1.2.55"
which = "8.0.0"

[lints]
workspace = true
