[package]
name = "simd_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.93", features = ["proc-macro"] }
quote = "1.0.38"
syn = { version = "2.0.98", default-features = false, features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }
