[package]
name = "simd_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["proc-macro"] }
quote = "1"
syn = { version = "2", default-features = false, features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }
