[package]
name = "vchordrq"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
algo = { path = "../algo" }
always_equal = { path = "../always_equal" }
distance = { path = "../distance" }
rabitq = { path = "../rabitq" }
simd = { path = "../simd" }
vector = { path = "../vector" }

half.workspace = true
pin-project = "1.1"
serde.workspace = true
validator.workspace = true
zerocopy.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
