[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
object = { version = "0.37.3", features = ["read", "wasm"] }
serde.workspace = true
serde_json = "1.0.145"
shlex = "1.3.0"
target-triple = "1.0.0"

[lints]
workspace = true
