[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
object = { version = "0.39.0", features = ["read", "wasm"] }
serde.workspace = true
serde_json = "1.0.149"
shlex = "1.3.0"
target-triple = "1.0.0"
tempfile = "3.27.0"

[lints]
workspace = true
